Fixed spacing of all elements to align better and cleaner

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,16 @@ body {
 }
 
 h1 {
+  color: #000;
   text-transform: capitalize;
   font-family: var(--headline-font);
   font-size: 50px;
   line-height: 40px;
   padding-top: 10px;
+}
+
+.pokemon-headline {
+  color: #000;
 }
 
 .list-group-bg {
